--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.min.js",
     "types": "dist/src/index.d.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest test",
         "build": "npm run build-lib && npm run build-examples",
         "build-lib": "rollup -c && rollup -c --environment environment:production",
         "build-examples": "rollup -c rollup.example.config.js --environment environment:production",
@@ -27,11 +27,16 @@
         "url": "https://github.com/albert-gonzalez/easytimer-react-hook"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.13.10",
+        "@babel/preset-typescript": "^7.13.0",
         "@rollup/plugin-commonjs": "^17.1.0",
         "@rollup/plugin-node-resolve": "^11.2.0",
         "@rollup/plugin-replace": "^2.4.1",
+        "@testing-library/react-hooks": "^5.1.0",
+        "@types/jest": "^26.0.20",
         "@types/react": "^17.0.2",
         "@types/react-dom": "^17.0.1",
+        "@types/sinon": "^9.0.11",
         "@typescript-eslint/eslint-plugin": "^4.17.0",
         "@typescript-eslint/parser": "^4.17.0",
         "bulma": "^0.9.2",
@@ -40,6 +45,7 @@
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-react": "^7.22.0",
         "husky": "^5.1.3",
+        "jest": "^26.6.3",
         "lint-staged": "^10.5.4",
         "prettier": "2.2.1",
         "react": "^17.0.1",
@@ -51,6 +57,7 @@
         "rollup-plugin-serve": "^1.1.0",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.30.0",
+        "sinon": "^9.2.4",
         "tslib": "^2.1.0",
         "typescript": "^4.2.3"
     },
