description updated + source code section added to example page

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "easytimer-react-hook",
     "version": "1.0.2",
-    "description": "EasyTimer React Hook",
+    "description": "React Hook that creates a timer using EasyTimer lib",
     "main": "dist/index.min.js",
     "types": "dist/src/index.d.ts",
     "scripts": {
