--- a/package.json
+++ b/package.json
@@ -26,40 +26,43 @@
         "type": "git",
         "url": "https://github.com/albert-gonzalez/easytimer-react-hook"
     },
+    "peerDependencies": {
+        "easytimer.js": ">=4.0.0",
+        "react": ">= 16.8.0"
+    },
     "devDependencies": {
-        "@babel/preset-env": "^7.13.10",
-        "@babel/preset-typescript": "^7.13.0",
-        "@rollup/plugin-commonjs": "^17.1.0",
-        "@rollup/plugin-node-resolve": "^11.2.0",
-        "@rollup/plugin-replace": "^2.4.1",
-        "@testing-library/react-hooks": "^5.1.0",
-        "@types/jest": "^26.0.20",
-        "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.1",
-        "@types/sinon": "^9.0.11",
-        "@typescript-eslint/eslint-plugin": "^4.17.0",
-        "@typescript-eslint/parser": "^4.17.0",
-        "bulma": "^0.9.2",
-        "easytimer.js": "^4.3.2",
-        "eslint": "^7.21.0",
-        "eslint-config-prettier": "^8.1.0",
-        "eslint-plugin-react": "^7.22.0",
-        "husky": "^5.1.3",
-        "jest": "^26.6.3",
-        "lint-staged": "^10.5.4",
-        "prettier": "2.2.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "rollup": "^2.40.0",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-typescript": "^7.16.7",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-node-resolve": "^13.1.3",
+        "@rollup/plugin-replace": "^3.1.0",
+        "@testing-library/react-hooks": "^7.0.2",
+        "@types/jest": "^27.4.0",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^17.0.11",
+        "@types/sinon": "^10.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.11.0",
+        "@typescript-eslint/parser": "^5.11.0",
+        "bulma": "^0.9.3",
+        "eslint": "^8.9.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-react": "^7.28.0",
+        "husky": "^7.0.4",
+        "jest": "^27.5.1",
+        "lint-staged": "^12.3.3",
+        "prettier": "2.5.1",
+        "react-dom": "^17.0.2",
+        "rollup": "^2.67.2",
         "rollup-plugin-copy": "^3.4.0",
-        "rollup-plugin-license": "^2.3.0",
-        "rollup-plugin-scss": "^2.6.1",
+        "rollup-plugin-license": "^2.6.1",
+        "rollup-plugin-scss": "^3.0.0",
         "rollup-plugin-serve": "^1.1.0",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.30.0",
-        "sinon": "^9.2.4",
-        "tslib": "^2.1.0",
-        "typescript": "^4.2.3"
+        "rollup-plugin-typescript2": "^0.31.2",
+        "sass": "^1.49.7",
+        "sinon": "^13.0.1",
+        "tslib": "^2.3.1",
+        "typescript": "^4.5.5"
     },
     "lint-staged": {
         "*.{ts,tsx}": "eslint --cache --fix",
