--- a/package.json
+++ b/package.json
@@ -31,38 +31,39 @@
         "react": ">= 16.8.0"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.16.11",
-        "@babel/preset-typescript": "^7.16.7",
-        "@rollup/plugin-commonjs": "^21.0.1",
-        "@rollup/plugin-node-resolve": "^13.1.3",
-        "@rollup/plugin-replace": "^3.1.0",
-        "@testing-library/react-hooks": "^7.0.2",
-        "@types/jest": "^27.4.0",
-        "@types/react": "^17.0.39",
-        "@types/react-dom": "^17.0.11",
-        "@types/sinon": "^10.0.11",
-        "@typescript-eslint/eslint-plugin": "^5.11.0",
-        "@typescript-eslint/parser": "^5.11.0",
-        "bulma": "^0.9.3",
-        "eslint": "^8.9.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-react": "^7.28.0",
-        "husky": "^7.0.4",
-        "jest": "^27.5.1",
-        "lint-staged": "^12.3.3",
-        "prettier": "2.5.1",
-        "react-dom": "^17.0.2",
-        "rollup": "^2.67.2",
+        "@babel/preset-env": "^7.18.10",
+        "@babel/preset-typescript": "^7.18.6",
+        "@rollup/plugin-commonjs": "^22.0.2",
+        "@rollup/plugin-node-resolve": "^13.3.0",
+        "@rollup/plugin-replace": "^4.0.0",
+        "@testing-library/react": "^13.3.0",
+        "@types/jest": "^28.1.7",
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "@types/sinon": "^10.0.13",
+        "@typescript-eslint/eslint-plugin": "^5.34.0",
+        "@typescript-eslint/parser": "^5.34.0",
+        "bulma": "^0.9.4",
+        "eslint": "^8.22.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-react": "^7.30.1",
+        "husky": "^8.0.1",
+        "jest": "^28.1.3",
+        "jest-environment-jsdom": "^28.1.3",
+        "lint-staged": "^13.0.3",
+        "prettier": "2.7.1",
+        "react-dom": "^18.2.0",
+        "rollup": "^2.78.1",
         "rollup-plugin-copy": "^3.4.0",
-        "rollup-plugin-license": "^2.6.1",
+        "rollup-plugin-license": "^2.8.1",
         "rollup-plugin-scss": "^3.0.0",
-        "rollup-plugin-serve": "^1.1.0",
+        "rollup-plugin-serve": "^2.0.1",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.31.2",
-        "sass": "^1.49.7",
-        "sinon": "^13.0.1",
-        "tslib": "^2.3.1",
-        "typescript": "^4.5.5"
+        "rollup-plugin-typescript2": "^0.33.0",
+        "sass": "^1.54.5",
+        "sinon": "^14.0.0",
+        "tslib": "^2.4.0",
+        "typescript": "^4.7.4"
     },
     "lint-staged": {
         "*.{ts,tsx}": "eslint --cache --fix",
