--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "test": "jest test",
         "build": "npm run build-lib && npm run build-examples",
         "build-lib": "rollup -c && rollup -c --environment environment:production",
-        "build-examples": "rollup -c rollup.example.config.js --environment environment:production",
-        "dev": "rollup -c rollup.example.config.js -w",
+        "build-examples": "rollup -c rollup.example.config.mjs --environment environment:production",
+        "dev": "rollup -c rollup.example.config.mjs -w",
         "prepare": "husky install",
         "lint-staged": "lint-staged"
     },
@@ -31,42 +31,45 @@
         "react": ">= 16.8.0"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.18.10",
-        "@babel/preset-typescript": "^7.18.6",
-        "@rollup/plugin-commonjs": "^22.0.2",
-        "@rollup/plugin-node-resolve": "^13.3.0",
-        "@rollup/plugin-replace": "^4.0.0",
-        "@testing-library/react": "^13.3.0",
-        "@types/jest": "^28.1.7",
-        "@types/react": "^18.0.17",
-        "@types/react-dom": "^18.0.6",
-        "@types/sinon": "^10.0.13",
-        "@typescript-eslint/eslint-plugin": "^5.34.0",
-        "@typescript-eslint/parser": "^5.34.0",
+        "@babel/preset-env": "^7.22.10",
+        "@babel/preset-typescript": "^7.22.11",
+        "@rollup/plugin-commonjs": "^25.0.4",
+        "@rollup/plugin-node-resolve": "^15.2.1",
+        "@rollup/plugin-replace": "^5.0.2",
+        "@rollup/plugin-terser": "^0.4.3",
+        "@testing-library/react": "^14.0.0",
+        "@types/jest": "^29.5.4",
+        "@types/react": "^18.2.21",
+        "@types/react-dom": "^18.2.7",
+        "@types/sinon": "^10.0.16",
+        "@typescript-eslint/eslint-plugin": "^6.5.0",
+        "@typescript-eslint/parser": "^6.5.0",
         "bulma": "^0.9.4",
-        "eslint": "^8.22.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-react": "^7.30.1",
-        "husky": "^8.0.1",
-        "jest": "^28.1.3",
-        "jest-environment-jsdom": "^28.1.3",
-        "lint-staged": "^13.0.3",
-        "prettier": "2.7.1",
+        "eslint": "^8.48.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-react": "^7.33.2",
+        "husky": "^8.0.3",
+        "jest": "^29.6.4",
+        "jest-environment-jsdom": "^29.6.4",
+        "lint-staged": "^14.0.1",
+        "prettier": "3.0.2",
         "react-dom": "^18.2.0",
-        "rollup": "^2.78.1",
+        "rollup": "^3.28.1",
         "rollup-plugin-copy": "^3.4.0",
-        "rollup-plugin-license": "^2.8.1",
-        "rollup-plugin-scss": "^3.0.0",
-        "rollup-plugin-serve": "^2.0.1",
-        "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.33.0",
-        "sass": "^1.54.5",
-        "sinon": "^14.0.0",
-        "tslib": "^2.4.0",
-        "typescript": "^4.7.4"
+        "rollup-plugin-license": "^3.0.1",
+        "rollup-plugin-scss": "^4.0.0",
+        "rollup-plugin-serve": "^2.0.2",
+        "rollup-plugin-typescript2": "^0.35.0",
+        "sass": "^1.66.1",
+        "sinon": "^15.2.0",
+        "tslib": "^2.6.2",
+        "typescript": "^5.2.2"
     },
     "lint-staged": {
         "*.{ts,tsx}": "eslint --cache --fix",
         "*.{ts,tsx,scss,md}": "prettier --write"
+    },
+    "volta": {
+        "node": "18.17.1"
     }
 }
